--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,12 @@
             android:label="@string/activity_question_details"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".mvp.images.ImagePreviewActivity"
+            android:label="@string/activity_image_preview"
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        ImagePreviewActivity
+        <activity
             android:name=".mvp.questionedit.QuestionEditActivity"
             android:label="@string/activity_edit_question"
             android:theme="@style/AppTheme.NoActionBar" />
